@@ -173,6 +173,9 @@
         settings to replace it in 2.4.
         </li>
 
+        <li><directive module="core">EnableSendfile</directive> now
+        defaults to Off.</li>
+
         <li><module>mod_log_config</module>: <a
         href="modules/mod_log_config.html#formats">${cookie}C</a>
         matches whole cookie names.  Previously any substring would
